--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
     
     <main>
 
-        Make a Web App!
+        <input id="add-number-1"></input> 
+        +
+        <input id="add-number-2"></input> 
+        <button id="add-button">=</button>
+        <span id="add-answer">?</span>
         
     </main>
 
