--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My App</title>
+    <title>Brettford's Calculator</title>
 </head>
 
 <body>
@@ -19,12 +19,14 @@
     
     <main>
 
-        <input id="add-number-1"></input> 
-        +
-        <input id="add-number-2"></input> 
-        <button id="add-button">=</button>
-        <span id="add-answer">?</span>
-        
+        <section>
+            <input id="add-number-1">
+            +
+            <input id="add-number-2">
+            <button id="add-button">=</button>
+            <span id="add-answer">?</span>
+
+        </section>
     </main>
 
     <footer>
