--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
             <input id="add-number-2">
             <button id="add-button">=</button>
             <span id="add-answer">?</span>
-
         </section>
-    </main>
+        
+        <section>
+            <input id="sub-number-1">
+            -
+            <input id="sub-number-2">
+            <button id="sub-button">=</button>
+            <span id="sub-answer">?</span>
+        </section>
+        </main>
 
     <footer>
         &copy; 2021 Alchemy Code Lab
