Multiply function tested and working

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
             <button id="sub-button">=</button>
             <span id="sub-answer">?</span>
         </section>
+        <section>
+            <input id="mult-number-1">
+            x
+            <input id="mult-number-2">
+            <button id="mult-button">=</button>
+            <span id="mult-answer">?</span>
+        </section>
         </main>
 
     <footer>
