Added division to calculator

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             <button id="mult-button">=</button>
             <span id="mult-answer">?</span>
         </section>
+        <section>
+            <input id="div-number-1">
+            /
+            <input id="div-number-2">
+            <button id="div-button">=</button>
+            <span id="div-answer">?</span>
+        </section>
         </main>
 
     <footer>
