--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <button id="add-button">=</button>
             <span id="add-answer">?</span>
         </section>
-        
         <section>
             <input id="sub-number-1">
             -
@@ -47,6 +46,20 @@
             <input id="div-number-2">
             <button id="div-button">=</button>
             <span id="div-answer">?</span>
+        </section>
+        <section>
+            <input id="mod-number-1">
+            %
+            <input id="mod-number-2">
+            <button id="mod-button">=</button>
+            <span id="mod-answer">?</span>
+        </section>
+        <section>
+            <input id="int-number-1">
+            \
+            <input id="int-number-2">
+            <button id="int-button">=</button>
+            <span id="int-answer">?</span>
         </section>
         </main>
 
